<resources>
    <string name="app_name">WeekendAssignamentOne</string>
    <string name="action_settings">Settings</string>
    <string name="user_name_lbl">User Name</string>
    <string name="password_lbl">Password</string>
    <string name="show_pass_lbl">Show Password</string>
    <string name="remember_lbl">Remember Me</string>
    <string name="login_lbl">LOGIN</string>
    <string name="create_lbl">Create</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="name_lbl">Name</string>
    <string name="passport_lbl">Passport</string>
    <string name="nin_lbl">National Insurance Number</string>
    <string name="confirm_lbl">Confirm Password</string>
    <string name="male_lbl">Male</string>
    <string name="female_lbl">Female</string>
    <string-array name="options_array">
        <item>Manager</item>
        <item>User</item>
    </string-array>
    <string-array name="country_array">
        <item>USA</item>
        <item>Mexico</item>
        <item>Canada</item>
    </string-array>

</resources>
