<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user_name_lbl"
        android:ems="10"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/password_lbl"
        android:password="false" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLogin"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pass_lbl"
        android:id="@+id/checkBoxPassword"
        android:layout_below="@+id/spinnerLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_lbl"
        android:id="@+id/checkBoxRemember"
        android:layout_below="@+id/checkBoxPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_lbl"
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</LinearLayout>
